--- a/css/index.css
+++ b/css/index.css
@@ -12,452 +12,457 @@ body {
 }
 
 .column {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 0.9375%;
-    height: 99.8vh;
-    background-color: #ffffff;
-    border: 1px solid #ffffff;
-    z-index: 1; 
-  }
-  
-  .box1 {
-    position: absolute;
-    width: calc(100% - 0.9375%);
-    height: 14.77777778%;
-    background: #ffffff;
-    top: 0;
-    left: 0.9375%; 
-    border: 0px solid #ffffff;
-    z-index: 2; 
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 0.9375%;
+  height: 99.8vh;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  z-index: 1;
+}
 
-  .box2 {
-    position: absolute;
-    width: 26.7%;
-    height: 14.77777778%;
-    background: #000000;
-    top: 0;
-    left: 50.75%; /* Defina o left da box1 igual à largura da column1 */
-    border: 1px solid #000000;
-    z-index: 3; /* Defina um z-index maior para a box1 */
-    display: none;
-  }
+.box1 {
+  position: absolute;
+  width: calc(100% - 0.9375%);
+  height: 14.77777778%;
+  background: #ffffff;
+  top: 0;
+  left: 0.9375%;
+  border: 0px solid #ffffff;
+  z-index: 2;
+}
 
-  header .box1 img {
-    position: absolute;
-    max-width: 80%;
-    max-height: 80%;
-    width: auto;
-    top: 10%;
-    left: 5%; 
-    z-index: 3;
+.box2 {
+  position: absolute;
+  width: 26.7%;
+  height: 14.77777778%;
+  background: #000000;
+  top: 0;
+  left: 50.75%;
+  /* Defina o left da box1 igual à largura da column1 */
+  border: 1px solid #000000;
+  z-index: 3;
+  /* Defina um z-index maior para a box1 */
+  display: none;
+}
 
-  }
+header .box1 img {
+  position: absolute;
+  max-width: 80%;
+  max-height: 80%;
+  width: auto;
+  top: 10%;
+  left: 5%;
+  z-index: 3;
 
-  header nav a {
-    position: absolute;
-    top: 4%;
-    left: 22%;
-    font-size: 1.5rem;
-    color: #000000;
-    text-decoration: none;
-    border: 0px solid #cd0000;
-    z-index: 3;
-    display: inline-block;
-  }
+}
 
-  header nav a.humachine-link {
-    color: #000000;
-  }
+header nav a {
+  position: absolute;
+  top: 4%;
+  left: 22%;
+  font-size: 1.5rem;
+  color: #000000;
+  text-decoration: none;
+  border: 0px solid #cd0000;
+  z-index: 3;
+  display: inline-block;
+}
 
-  header nav a .experiment-text {
-    color: #ffffff;
-    background-color: #000000;
-  }
-  
-  header nav a.about-link {
-    position: absolute;
-    top: 4%;
-    left: 84%;
-    font-family: 'Arial';
-    font-style: bold;
-    font-weight: bold;
-    font-size: 1.5rem;
-    text-align: start;
-    color: #000000;
-    text-decoration: none;
-    border: 0px solid #cd0000;
-    z-index: 3;
-    display: inline-block;
-  }
+header nav a.humachine-link {
+  color: #000000;
+}
 
-  main {
-    position: relative;
-    width: calc(100% - 0.9375%);
-    height: 77.777777778%;
-    background: #000000;
-    top: 14.77777778%;
-    left: 0.9375%;
-    z-index: 2;
-    overflow: hidden;
-  }
+header nav a .experiment-text {
+  color: #ffffff;
+  background-color: #000000;
+}
 
-  main video {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    min-width: 100%;
-    min-height: 100%;
-    z-index: 2;
-  }
+header nav a.about-link {
+  position: absolute;
+  top: 4%;
+  left: 84%;
+  font-family: 'Arial';
+  font-style: bold;
+  font-weight: bold;
+  font-size: 1.5rem;
+  text-align: start;
+  color: #000000;
+  text-decoration: none;
+  border: 0px solid #cd0000;
+  z-index: 3;
+  display: inline-block;
+}
 
-  main #text-box{
-    position: absolute;
-    top: 5%;
-    left: 5%;
-    font-size: 1.5rem;
-    font-style: normal;
-    color: #ffffff40;
-    text-decoration: none;
-    z-index: 3;
-    opacity: 0.2;
-    transition: opacity 0.5s ease-in-out;
-    display: block;
-  }
+main {
+  position: relative;
+  width: calc(100% - 0.9375%);
+  height: 77.777777778%;
+  background: #000000;
+  top: 14.77777778%;
+  left: 0.9375%;
+  z-index: 2;
+  overflow: hidden;
+}
 
-  main #text-box:hover{
-    background-color: #ffffff;
-    color: #000000;
-    opacity: 1;
-  }
+main video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+  z-index: 2;
+}
 
-  main #next-btn{
-    position: absolute;
-    top: 40%;
-    left: 92%;
-    width: 5%;
-    height: 14.77777778%;
-    background: none;
-    background-repeat: no-repeat;
-    background-size: contain;
-    text-indent: -9999px; 
-    border: none;
-    outline: none;
-    opacity: 0.2;
-    transition: opacity 0.5s ease-in-out;
-    z-index: 2;
-  }
+main #text-box {
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  font-size: 1.5rem;
+  font-style: normal;
+  color: #ffffff40;
+  text-decoration: none;
+  z-index: 3;
+  opacity: 0.2;
+  transition: opacity 0.5s ease-in-out;
+  display: block;
+}
 
-  main #next-btn:hover{
-    opacity: 1;
-  }
+main #text-box:hover {
+  background-color: #ffffff;
+  color: #000000;
+  opacity: 1;
+}
 
-  footer {
-    position: absolute;
-    width: calc(100% - 0.9375%);
-    height: 7.44%;
-    background: #ffffff;
-    top: calc(77.777777778% + 14.77777778%);
-    left: 0.9375%;
-    border: 0px solid #ffffff;
-    z-index: 2; /* Defina um z-index maior para a box1 */
-  }
+main #next-btn {
+  position: absolute;
+  top: 40%;
+  left: 92%;
+  width: 5%;
+  height: 14.77777778%;
+  background: none;
+  background-repeat: no-repeat;
+  background-size: contain;
+  text-indent: -9999px;
+  border: none;
+  outline: none;
+  opacity: 0.2;
+  transition: opacity 0.5s ease-in-out;
+  z-index: 2;
+}
 
-  footer nav a {
-    position: absolute;
-    top: 15%;
-    left: 22%;
-    font-size: 1.2rem;
-    color: #000000;
-    text-decoration: none;
-    border: 0px solid #cd0000;
-    z-index: 3;
-    display: inline-block;
-  }
+main #next-btn:hover {
+  opacity: 1;
+}
 
-  footer nav a.follow {
-    left: 7%;
-    color: #000000;
-  }
+footer {
+  position: absolute;
+  width: calc(100% - 0.9375%);
+  height: 7.44%;
+  background: #ffffff;
+  top: calc(77.777777778% + 14.77777778%);
+  left: 0.9375%;
+  border: 0px solid #ffffff;
+  z-index: 2;
+  /* Defina um z-index maior para a box1 */
+}
 
-  footer nav a.e-mail {
-    left: 45%;
-    color: #000000;
-  }
+footer nav a {
+  position: absolute;
+  top: 15%;
+  left: 22%;
+  font-size: 1.2rem;
+  color: #000000;
+  text-decoration: none;
+  border: 0px solid #cd0000;
+  z-index: 3;
+  display: inline-block;
+}
 
-  footer nav a.portfolio-link {
-    left: 80%;
-    color: #000000;
-  }
-  
+footer nav a.follow {
+  left: 7%;
+  color: #000000;
+}
 
+footer nav a.e-mail {
+  left: 45%;
+  color: #000000;
+}
 
-  body {
-    background-color: black;
-  }
-
-  .about-column {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 6.5%;
-    height: 99.8vh;
-    background-color: #ffffff;
-    border: 1px solid #ffffff;
-    z-index: 3; 
-  }
-
-  .about-box {
-    position: fixed;
-    top: 10%;
-    left: 0;
-    width: 100%;
-    height: 8.5%;
-    background-color: #ffffff;
-    border: 1px solid #ffffff;
-    z-index: 3; 
-  }
-
-  header .about-title {
-    position: absolute;
-    top: 25%;
-    left: 10%;
-    font-size: 1.4rem;
-    font-style: bold;
-    color: #000000;
-    text-decoration: none;
-    border: 0px solid #cd0000;
-    z-index: 3;
-    display: inline-block;
-  }
+footer nav a.portfolio-link {
+  left: 80%;
+  color: #000000;
+}
 
 
 
-  #principal-about {
-    background-color: #000000;
-  }
+body {
+  background-color: black;
+}
 
-  #text-about {
-    color: #000000;
-    background-color: #ffffff;
-    position: absolute;
-    font-size: 1rem;
-    font-weight: 400;
-    top: 22%;
-    left: 28%;
-    width:60%
-  }
+.about-column {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 6.5%;
+  height: 99.8vh;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  z-index: 3;
+}
 
-  #tag-email {
-    color: #000000;
-  }
-  #about-wiw-logo {
-    position: absolute;
-    max-width: 38%;
-    max-height: 38%;
-    transform: rotate(90deg);
-    width: auto;
-    top: 32%;
-    left: 3%;
-  }
+.about-box {
+  position: fixed;
+  top: 10%;
+  left: 0;
+  width: 100%;
+  height: 8.5%;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  z-index: 3;
+}
 
-  .portfolio-column {
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    left: 0;
-    width: 5%;
-    height: 99.8vh;
-    background-color: #ffffff;
-    border: 1px solid #ffffff;
-    z-index: 3; 
-  }
+header .about-title {
+  position: absolute;
+  top: 25%;
+  left: 10%;
+  font-size: 1.4rem;
+  font-style: bold;
+  color: #000000;
+  text-decoration: none;
+  border: 0px solid #cd0000;
+  z-index: 3;
+  display: inline-block;
+}
 
-  .portfolio-column a {
-    text-decoration: none;
-    }
 
-  .portfolio-column p {
-    position: relative;
-    text-align: start;
-    font-size: 1.4rem;
-    font-weight: 800;
-    color: #000000;
-    border: 0px solid #ffffff;
-    z-index: 4;
-    align-self: center;
-    writing-mode: vertical-rl; 
-    }
 
-    .mid-column {
-      position: fixed;
-      top: 50%;
-      left: 55%;
-      width: 2%;
-      height: 45%;
-      background-color: #ffffff;
-      border: 1px solid #ffffff;
-    }
+#principal-about {
+  background-color: #000000;
+}
 
-    .gamb {
-      position: fixed;
-      top: 46.4%;
-      left: 45%;
-      width: 20%;
-      height:9.1%;
-      background-color: #ffffff;
-      border: 0px solid #ffffff;
-    }
+#text-about {
+  color: #000000;
+  background-color: #ffffff;
+  position: absolute;
+  font-size: 1rem;
+  font-weight: 400;
+  top: 22%;
+  left: 28%;
+  width: 60%
+}
 
-    #principal-portfolio {
-      top: 0;
-      left: 5%;
-      height: calc(100% - 7.44%);
-      width: calc(100% - 5%);
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-      grid-template-areas: 
-        "container1 container2"
-        "container3 container4";
-    }
+#tag-email {
+  color: #000000;
+}
 
-    #principal-portfolio p {
-      font-style: normal;
-      font-size: 1rem;
-      font-weight: 1;
-      color: #ffffff;
-      margin:3% 2%; 
-    }
+#about-wiw-logo {
+  position: absolute;
+  max-width: 38%;
+  max-height: 38%;
+  transform: rotate(90deg);
+  width: auto;
+  top: 32%;
+  left: 3%;
+}
 
-    #principal-portfolio strong {
-      font-style: bold;
-      font-size: 1.4rem;
-      font-weight: 700;
-    }
-    
-    .container1-portfolio {
-      grid-area: container1;
-      background-color: #000000;
-    }
+.portfolio-column {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 5%;
+  height: 99.8vh;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  z-index: 3;
+}
 
-    .container1-portfolio a {
-    grid-area: container1;
-	  text-decoration: none !important;  
-    color: #ffffff;
-    }
-	
-	.container1-portfolio a:hover, .container2-portfolio a:hover {
-	  color: #000000 !important;
-	  background-color: #ffffff !important;
-    }
+.portfolio-column a {
+  text-decoration: none;
+}
 
-    
-    .container2-portfolio {
-      grid-area: container2;
-      background-color: #000000;
-      text-align: right;
-    }
+.portfolio-column p {
+  position: relative;
+  text-align: start;
+  font-size: 1.4rem;
+  font-weight: 800;
+  color: #000000;
+  border: 0px solid #ffffff;
+  z-index: 4;
+  align-self: center;
+  writing-mode: vertical-rl;
+}
 
-    .container2-portfolio a {
-      grid-area: container2;
-      text-decoration: none !important;  
-      color: #ffffff;
-    }
+.mid-column {
+  position: fixed;
+  top: 50%;
+  left: 55%;
+  width: 2%;
+  height: 45%;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+}
 
-    .container3-portfolio {
-      grid-area: container3;
-      background-color: #000000;
-      border:0px solid rgb(255, 255, 255);
-      
-    }
+.gamb {
+  position: fixed;
+  top: 46.4%;
+  left: 45%;
+  width: 20%;
+  height: 9.1%;
+  background-color: #ffffff;
+  border: 0px solid #ffffff;
+}
 
-    .container3-portfolio > .caixa-subtitulo-3 {
-      grid-area: container3;
-      width: 100%;
-      height: 20%;
-      background-color: #ffffff;
-      margin:0% !important;
-      border:0px solid rgb(255, 255, 255);
-    }
+#principal-portfolio {
+  top: 0;
+  left: 5%;
+  height: calc(100% - 7.44%);
+  width: calc(100% - 5%);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas:
+    "container1 container2"
+    "container3 container4";
+}
 
-    .container3-portfolio > .caixa-subtitulo-3 p {
-      grid-area: container3;
-      color: #000000 !important;
-      margin:0% 2% !important;
-      line-height: 2.5em;
-    }
+#principal-portfolio p {
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: 1;
+  color: #ffffff;
+  margin: 3% 2%;
+}
 
-    .caixa-subtitulo-3 nav a {
-      grid-area: container3;
-      text-decoration: none;
-      font-size: 1rem;
-      font-weight: 1;
-      color: #ffffff !important;
-      margin:0% 2% !important; 
-      border: 0px solid black;
-    }
-    
-    .container4-portfolio {
-      grid-area: container4;
-      background-color: #000000;
-      text-align: right;
-    }
+#principal-portfolio strong {
+  font-style: bold;
+  font-size: 1.4rem;
+  font-weight: 700;
+}
 
-    .container4-portfolio > .caixa-subtitulo-4 {
-      grid-area: container3;
-      width: 100%;
-      height: 20%;
-      background-color: #ffffff;
-      margin:0% !important;
-      border:0px solid rgb(146, 92, 92);
-    }
+.container1-portfolio {
+  grid-area: container1;
+  background-color: #000000;
+}
 
-    .container4-portfolio > .caixa-subtitulo-4 p {
-      grid-area: container3;
-      color: #000000 !important;
-      margin:0% 2% !important;
-      line-height: 2.5em;
-      text-align: right;
-    }
+.container1-portfolio a {
+  grid-area: container1;
+  text-decoration: none !important;
+  color: #ffffff;
+}
 
-    .caixa-subtitulo-4 nav a {
-      grid-area: container3;
-      text-decoration: none;
-      font-size: 1rem;
-      font-weight: 1;
-      color: #ffffff !important;
-      margin:0% 2% !important; 
-      border: 0px solid black;
-    }
+.container1-portfolio a:hover,
+.container2-portfolio a:hover {
+  color: #000000 !important;
+  background-color: #ffffff !important;
+}
 
-    .caixa-subtitulo-3 nav a:hover,
+
+.container2-portfolio {
+  grid-area: container2;
+  background-color: #000000;
+  text-align: right;
+}
+
+.container2-portfolio a {
+  grid-area: container2;
+  text-decoration: none !important;
+  color: #ffffff;
+}
+
+.container3-portfolio {
+  grid-area: container3;
+  background-color: #000000;
+  border: 0px solid rgb(255, 255, 255);
+
+}
+
+.container3-portfolio>.caixa-subtitulo-3 {
+  grid-area: container3;
+  width: 100%;
+  height: 20%;
+  background-color: #ffffff;
+  margin: 0% !important;
+  border: 0px solid rgb(255, 255, 255);
+}
+
+.container3-portfolio>.caixa-subtitulo-3 p {
+  grid-area: container3;
+  color: #000000 !important;
+  margin: 0% 2% !important;
+  line-height: 2.5em;
+}
+
+.caixa-subtitulo-3 nav a {
+  grid-area: container3;
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 1;
+  color: #ffffff !important;
+  margin: 0% 2% !important;
+  border: 0px solid black;
+}
+
+.container4-portfolio {
+  grid-area: container4;
+  background-color: #000000;
+  text-align: right;
+}
+
+.container4-portfolio>.caixa-subtitulo-4 {
+  grid-area: container3;
+  width: 100%;
+  height: 20%;
+  background-color: #ffffff;
+  margin: 0% !important;
+  border: 0px solid rgb(146, 92, 92);
+}
+
+.container4-portfolio>.caixa-subtitulo-4 p {
+  grid-area: container3;
+  color: #000000 !important;
+  margin: 0% 2% !important;
+  line-height: 2.5em;
+  text-align: right;
+}
+
+.caixa-subtitulo-4 nav a {
+  grid-area: container3;
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 1;
+  color: #ffffff !important;
+  margin: 0% 2% !important;
+  border: 0px solid black;
+}
+
+.caixa-subtitulo-3 nav a:hover,
 .caixa-subtitulo-4 nav a:hover {
   color: #000000 !important;
   background-color: #ffffff !important;
 }
 
-  .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 100vh; /* altura = altura da viewport */
-    border: 0px solid black;
-    width: calc(100vh * 1.77 / 1); /* largura = altura * proporção */
-    max-width: 100vw; /* largura máxima = largura da viewport */
-  }
-  
-  .content {
-    width: 100%;
-    height: 100%;
-    background-color: #000000;
-  }
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100vh;
+  /* altura = altura da viewport */
+  border: 0px solid black;
+  width: calc(100vh * 1.77 / 1);
+  /* largura = altura * proporção */
+  max-width: 100vw;
+  /* largura máxima = largura da viewport */
+}
 
-
-  
+.content {
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+}
